--- a/index.html
+++ b/index.html
@@ -4,34 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tree Visualizer</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css?v=1.0">
 </head>
 <body>
-  <div class="container">
+  <!-- Left input panel -->
+  <div class="sidebar">
     <h1>🌳 Tree Visualizer</h1>
-    
-    <div class="card">
-      <div class="input-section">
-        <label for="nodes">Number of Nodes (max 20):</label>
-        <input type="number" id="nodes" min="1" max="20" placeholder="e.g. 5">
 
-        <label for="root">Root Node (1 to n):</label>
-        <input type="number" id="root" min="1" placeholder="e.g. 1">
+    <label for="nodes">Number of Nodes</label>
+    <input type="number" id="nodes" min="1" placeholder="e.g. 5">
 
-        <label for="edges">Edges:</label>
-        <textarea id="edges" rows="4" placeholder="e.g. 1 2, 1 3, 2 4"></textarea>
+    <label for="root">Root Node</label>
+    <input type="number" id="root" min="1" placeholder="e.g. 1">
 
-        <button onclick="visualizeTree()">Visualize Tree</button>
-        <p id="error" class="error"></p>
-      </div>
-    </div>
+    <label for="edges">Edges</label>
+    <textarea id="edges" placeholder="e.g. 1 2, 1 3, 2 4, 2 5"></textarea>
 
-    <div class="canvas-container">
-      <canvas id="treeCanvas"></canvas>
-    </div>
+    <button class="visualize-btn" onclick="visualizeTree()">🚀 Visualize Tree</button>
+    <p id="error" class="error"></p>
   </div>
 
-  <!-- JS file -->
-  <script src="script.js"></script>
+  <!-- Right canvas output -->
+  <div class="main-content">
+    <canvas id="treeCanvas"></canvas>
+  </div>
+
+  <script src="script.js?v=1.0"></script>
 </body>
 </html>
