--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Left input panel -->
   <div class="sidebar">
-    <h1>📊 Graph Visualizer</h1>
+    <h1>Graph Visualizer</h1>
 
       <label for="nodes">Number of nodes (max 50):</label>
       <input type="number" id="nodes" min="1" max="50" value="5" required>    <label for="edges">Edges (Optional for disconnected graphs)</label>
@@ -41,19 +41,19 @@
       </label>
     </div>
 
-    <button class="visualize-btn" onclick="visualizeGraph()">🚀 Visualize Graph</button>
+    <button class="visualize-btn" onclick="visualizeGraph()">Visualize Graph</button>
     <p id="error" class="error"></p>
     
     <div class="info">
-      <h3>💡 Tips:</h3>
+      <h3>Tips:</h3>
       <ul>
         <li>Supports up to 50 nodes for optimal visualization</li>
+        <li>Drag nodes to reposition them freely</li>
         <li>Scroll to zoom in/out</li>
         <li>Double-click to reset zoom</li>
         <li>Circular layout for all sizes</li>
         <li>Bridges shown in red (undirected graphs)</li>
         <li>SCCs shown in different colors (directed graphs)</li>
-        <li>Smart edge routing avoids node overlaps</li>
       </ul>
     </div>
   </div>
